# MSIVulkanDemo

./: .gitignore  CMakeLists.txt  CMakePresets.json  MSIVulkanDemo.code-workspace  imgui.ini  vcpkg.json
models/: cubeuv.glb  sphere.glb  torus.glb
scenes/: scene.json  scene1.json  scene2.json  scene3.json
scripts/: bindToUniform.py  circle.py  rotate.py
shaders/: PBRLighting.glsl  PBRLightingTexture.glsl  default.glsl  gouraudPhongLighting.glsl  nie.glsl  phongLighting.glsl  phongLightingTexture.glsl  skybox.glsl  tak.glsl
src/: ImGuiInterface.h  app.h  component.h  component_decl.h  component_impl.h  componentsInfo.h  fileDialog.h  gameobject.h  gameobjectManagerI.h  gameobject_decl.h  gameobject_impl.h  input.h  json.h  main.cpp  resourceManager.h  scene.h  scriptManager.h
src/components/: behaviourComponent.h  cameraComponent.h  materialComponent.h  modelComponent.h  renderComponent.h  scriptComponent.h  skyboxRendererComponent.h  transformComponent.h
src/resources/: mesh.h  script.h  shaderProgram.h  texture.h
src/vulkan/: vulkanCommandBuffer.h  vulkanComponent.h  vulkanCore.h  vulkanDebug.h  vulkanDevice.h  vulkanFramebuffer.h  vulkanGraphicsPipeline.h  vulkanImageData.h  vulkanInstance.h  vulkanMemory.h  vulkanPhysicalDevice.h  vulkanRenderGraph.h  vulkanRenderPass.h  vulkanShader.h  vulkanSurface.h  vulkanSwapChain.h  vulkanSync.h  vulkanTextureSampler.h  vulkanUniform.h  vulkanVertexData.h
src/vulkan/interface/: vulkanBufferI.h  vulkanCommandBufferI.h  vulkanDescriptorSetOwner.h  vulkanDeviceI.h  vulkanImageI.h  vulkanRenderPassI.h  vulkanRendererI.h  vulkanSwapChainI.h
